<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/common_padding_default"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tituloNombre"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/common_padding_default"
          android:hint="@string/hint_nombre"
          app:helperText="@string/help_required"
          app:startIconDrawable="@drawable/ic_person"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName|textCapWords"
             android:maxLength="@integer/nombre_max_length" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tituloApellidos"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/common_padding_default"
          android:hint="@string/hint_apellidos"
          app:helperText="@string/help_required"
          app:startIconDrawable="@drawable/ic_person_2"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etApellidos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName|textCapWords"
             android:maxLength="@integer/nombre_max_length"/>
      </com.google.android.material.textfield.TextInputLayout>


      <LinearLayout
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:orientation="horizontal"
          android:layout_marginTop="@dimen/common_padding_default"
          android:baselineAligned="false">
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tituloAltura"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="40"
          android:hint="@string/hint_altura"
          app:helperText="@string/help_min_height"
          android:layout_marginEnd="@dimen/common_padding_min"
          app:startIconDrawable="@drawable/ic_altura"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etAltura"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:maxLength="@integer/altura_max_length"
             android:imeOptions="actionNext"
             android:nextFocusForward="@id/etLugarNacimiento"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="60"
          android:layout_marginStart="@dimen/common_padding_min"

          android:hint="@string/hint_fecha_de_nacimiento"
          app:startIconDrawable="@drawable/ic_calendar"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etFechaNacimiento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false" />
      </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_pais"
          android:layout_marginTop="@dimen/common_padding_default"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actvPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/common_padding_default"
          android:hint="@string/hint_lugar_de_nacimiento"
          app:startIconDrawable="@drawable/ic_baseline_place_24"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etLugarNacimiento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textAutoComplete"
             android:maxLength="@integer/lugar_nacimiento_max_length"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/common_padding_default"
          android:hint="@string/hint_notas"
          app:counterEnabled="true"
          app:counterMaxLength="@integer/notes_max_length"
          app:startIconDrawable="@drawable/ic_notes"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etNotas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:maxLength="@integer/notes_max_length"/>
      </com.google.android.material.textfield.TextInputLayout>

   </LinearLayout>

</ScrollView>